--- a/BasicWrangling.ipynb
+++ b/BasicWrangling.ipynb
@@ -154,9 +154,7 @@
     "\n",
     "# Loop to check all columns contained in list\n",
     "for col in numericcols:\n",
-    "    #print(col)\n",
-    "    #print(df.corr('SalesClosePrice', col))\n",
-    "    print(\"Column: {} Skewness: {} \".format(col, df.agg({'LISTPRICE': 'skewness'}).collect()))\n",
+    "    print(\"Column: {} Skewness: {} \".format(col, df.agg({col: 'skewness'}).collect()))\n",
     "\n"
    ]
   },
